# penumbra

./: .gitignore  CMakeLists.txt  PLAN.md  QUICK_REF.md  README.md  conanfile.txt
.claude/agents/: .index.yml  AGENT-COORDINATION-GUIDE.md  AGENT-SETUP-COMPLETE.md  boilerplate-generator.md  content-migration.md  gml-analyzer.md  graphics-implementation.md  physics-collision.md  testing-validation.md
assets/shaders/: sprite.frag  sprite.vert
include/core/: Math.h  Platform.h  Resources.h
include/game/: Enemy.h  Platform.h  Player.h  StateManager.h  TileGrid.h
include/rendering/: Camera.h  Renderer.h  Shaders.h
include/systems/: ObjectFactory.h  RoomSystem.h  SaveSystem.h
src/: main.cpp
tests/: CMakeLists.txt  core_test.cpp  physics_test.cpp  rendering_test.cpp  system_test.cpp
